<resources>
    <string name="app_name">Chat App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hi_wecome_back">Hi, Wecome Back!</string>
    <string name="hello_again_you_ve_been_missed">Hello again, you\'ve been missed!</string>
    <string name="email">Email</string>
    <string name="please_enter_your_email">Please Enter Your Email</string>
    <string name="password">Password</string>
    <string name="please_enter_your_password">Please Enter Your Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="dont_t_have_an_account">Dont\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="or_with">Or With</string>
    <string name="create_an_account">Create an account</string>
    <string name="connect_with_your_friends_today">Connect with your friends today!</string>
    <string name="please_enter_your_name">Please Enter Your Name</string>
    <string name="name">Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="new_message">New Message</string>
    <string name="example_name">Karry Nguyen</string>
    <string name="example_time">12:00AM</string>
    <string name="example_message">Hello example</string>
    <string name="enter_the_message">Enter the message</string>
    <string name="empty">Empty</string>
    <string name="info">Info</string>
    <string name="call">Call</string>
</resources>