<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.karry.chatapp.activity.MainActivity">

    <item
        android:id="@+id/action_call"
        android:orderInCategory="100"
        android:title="@string/call"
        android:icon="@drawable/ic_phone"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/search"
        android:icon="@drawable/ic_video"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_info"
        android:orderInCategory="100"
        android:title="@string/info"
        android:icon="@drawable/ic_info"
        app:showAsAction="ifRoom" />
</menu>