<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    tools:context=".ui.account.login.LoginFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.488">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:fontFamily="@font/manrope_semibold"
                android:shadowColor="@color/black"
                android:shadowDx="0"
                android:shadowDy="2"
                android:shadowRadius="5"
                android:text="@string/hi_wecome_back"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/hello_again_you_ve_been_missed"
                android:textColor="#999EA1"
                android:textSize="13sp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/email"
            android:textColor="#4e0189"
            android:textSize="13sp"
            android:fontFamily="@font/manrope_semibold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <EditText
            android:id="@+id/edt_login_email"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/button_outline_backround"
            android:fontFamily="@font/manrope_semibold"
            android:hint="@string/please_enter_your_email"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="#1F1F1F"
            android:textSize="15sp"
            android:textCursorDrawable="@drawable/cursor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/password"
            android:textColor="#4e0189"
            android:textSize="13sp"
            android:fontFamily="@font/manrope_semibold"
            app:layout_constraintStart_toStartOf="@+id/edt_login_email"
            app:layout_constraintTop_toBottomOf="@+id/edt_login_email" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/relativeLayout"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_outline_backround"
            app:layout_constraintEnd_toEndOf="@+id/edt_login_email"
            app:layout_constraintStart_toStartOf="@+id/edt_login_email"
            app:layout_constraintTop_toBottomOf="@+id/textView1">

            <EditText
                android:id="@+id/edt_login_password"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/manrope_semibold"
                android:hint="@string/please_enter_your_password"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="8dp"
                android:textColor="#1F1F1F"
                android:textSize="15sp"
                android:textCursorDrawable="@drawable/cursor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_login_show_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btn_login_show_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_show_password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/edt_login_password" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <CheckBox
            android:id="@+id/cb_login_remember"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:button="@drawable/checkbox"
            android:fontFamily="@font/manrope_semibold"
            android:paddingLeft="5dp"
            android:text="@string/remember_me"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:theme="@style/checkBoxStyle"
            app:layout_constraintStart_toStartOf="@+id/relativeLayout"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

        <TextView
            android:id="@+id/btn_to_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_semibold"
            android:text="@string/forgot_password"
            android:textColor="#FB344F"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/cb_login_remember"
            app:layout_constraintEnd_toEndOf="@+id/relativeLayout"
            app:layout_constraintTop_toTopOf="@+id/cb_login_remember" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_backround"
            android:fontFamily="@font/manrope_semibold"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@+id/btn_to_forgot"
            app:layout_constraintStart_toStartOf="@+id/cb_login_remember"
            app:layout_constraintTop_toBottomOf="@+id/cb_login_remember" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/or_with"
            android:textColor="#999EA1"
            android:textSize="13sp"
            android:fontFamily="@font/manrope_semibold"
            app:layout_constraintEnd_toEndOf="@+id/btn_login"
            app:layout_constraintStart_toStartOf="@+id/btn_login"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="16dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btn_login"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <View
            android:id="@+id/view1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="24dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/btn_login"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <LinearLayout
            android:id="@+id/btn_login_google"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:background="@drawable/button_outline_backround"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/view2"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_google" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/google"
                android:textColor="@color/black"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_login_facebook"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_outline_backround"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@+id/view1"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_facebook" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/facebook"
                android:textColor="@color/black"
                android:textSize="13sp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_login_facebook"
            app:layout_constraintStart_toStartOf="@+id/btn_login_google">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_t_have_an_account"
                android:textSize="13sp"
                android:textColor="#999EA1"
                android:fontFamily="@font/manrope_semibold"/>

            <TextView
                android:id="@+id/btn_to_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/sign_up"
                android:textSize="13sp"
                android:textColor="#4e0189"
                android:fontFamily="@font/manrope_semibold" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="#4e0189"
        android:layout_gravity="center"
        android:visibility="gone"/>
</FrameLayout>