<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sign_up_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.account.login.LoginFragment">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.488">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:fontFamily="@font/manrope_semibold"
                android:shadowColor="@color/black"
                android:shadowDx="0"
                android:shadowDy="2"
                android:shadowRadius="5"
                android:text="@string/create_an_account"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/connect_with_your_friends_today"
                android:textColor="#999EA1"
                android:textSize="15sp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/manrope_semibold"
            android:text="@string/name"
            android:textColor="#4e0189"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <EditText
            android:id="@+id/edt_sign_up_name"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/button_outline_backround"
            android:fontFamily="@font/manrope_semibold"
            android:hint="@string/please_enter_your_name"
            android:inputType="textPersonName"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="#1F1F1F"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/manrope_semibold"
            android:text="@string/email"
            android:textColor="#4e0189"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@+id/edt_sign_up_name"
            app:layout_constraintTop_toBottomOf="@+id/edt_sign_up_name" />

        <EditText
            android:id="@+id/edt_sign_up_email"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/button_outline_backround"
            android:fontFamily="@font/manrope_semibold"
            android:hint="@string/please_enter_your_email"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="#1F1F1F"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/manrope_semibold"
            android:text="@string/password"
            android:textColor="#4e0189"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@+id/edt_sign_up_email"
            app:layout_constraintTop_toBottomOf="@+id/edt_sign_up_email" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_outline_backround"
            app:layout_constraintEnd_toEndOf="@+id/edt_sign_up_name"
            app:layout_constraintStart_toStartOf="@+id/edt_sign_up_name"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <EditText
                android:id="@+id/edt_sign_up_password"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/manrope_semibold"
                android:hint="@string/please_enter_your_password"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="8dp"
                android:textColor="#1F1F1F"
                android:textCursorDrawable="@drawable/cursor"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_sign_up_show_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btn_sign_up_show_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_show_password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/edt_sign_up_password" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_backround"
            android:fontFamily="@font/manrope_semibold"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@+id/relativeLayout1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/relativeLayout1"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/manrope_semibold"
            android:text="@string/or_with"
            android:textColor="#999EA1"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@+id/btn_sign_up"
            app:layout_constraintStart_toStartOf="@+id/btn_sign_up"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_up" />

        <View
            android:id="@+id/view4"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="16dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btn_sign_up"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <View
            android:id="@+id/view3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="24dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/btn_sign_up"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <LinearLayout
            android:id="@+id/btn_sign_up_google"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_outline_backround"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/view4"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_google" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/google"
                android:textColor="@color/black"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_sign_up_facebook"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_outline_backround"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/view3"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_facebook" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/facebook"
                android:textColor="@color/black"
                android:textSize="13sp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_sign_up_facebook"
            app:layout_constraintStart_toStartOf="@+id/btn_sign_up_google">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/dont_t_have_an_account"
                android:textColor="#999EA1"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/btn_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/login"
                android:textColor="#4e0189"
                android:textSize="13sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/sign_up_progress"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="#4e0189"
        android:layout_gravity="center"
        android:visibility="gone"/>
</FrameLayout>