<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="5dp"
    android:paddingHorizontal="10dp">

    <TextView
        android:id="@+id/tv_conversation_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/example_name"
        android:fontFamily="@font/manrope_semibold"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:maxLines="1"
        app:layout_constraintEnd_toStartOf="@+id/tv_conversation_time"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_conversation_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_regular"
        android:maxEms="10"
        android:maxLines="1"
        android:text="@string/example_time"
        android:textColor="#8E8E93"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_conversation_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/manrope_semibold"
        android:text="@string/example_message"
        android:textColor="#8E8E93"
        android:textSize="13sp"
        android:maxLines="1"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_conversation_name" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="#8E8E93"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_conversation_message" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_next_ios"
        app:tint="#8E8E93" />
</androidx.constraintlayout.widget.ConstraintLayout>